--- a/infra/ansible/roles/dns-frr/templates/frr.conf.j2
+++ b/infra/ansible/roles/dns-frr/templates/frr.conf.j2
@@ -12,7 +12,8 @@ exit
 !
 router ospf
  network {{ INTERNAL_NETWORK_RANGE }} area 0
- network {{ INTERNAL_LISTEN_IP }}/32 area 0{% if EXTERNAL_LISTEN_IP != "" %}
- network {{ EXTERNAL_LISTEN_IP }}/32 area 0{% endif %}
+ network {{ INTERNAL_LISTEN_IP }}/32 area 0
+{% if EXTERNAL_LISTEN_IP != "" %} network {{ EXTERNAL_LISTEN_IP }}/32 area 0
+{% endif %}
 exit
 !
