--- a/infra/ansible/roles/dns-frr/templates/iptables.j2
+++ b/infra/ansible/roles/dns-frr/templates/iptables.j2
@@ -2,26 +2,50 @@
 :INPUT ACCEPT [0:0]
 :FORWARD ACCEPT [0:0]
 :OUTPUT ACCEPT [0:0]
+
 -A INPUT -s 10.70.90.53/32 -d {{ INTERNAL_MGT_IP }}/32 -j ACCEPT
+
+# DROP Bogons but not 10.0.0.0/8
+-A INPUT -s 0.0.0.0/8 -j DROP
+-A INPUT -s 100.64.0.0/10 -j DROP
+-A INPUT -s 127.0.0.0/8 -j DROP
+-A INPUT -s 127.0.53.53 -j DROP
+-A INPUT -s 169.254.0.0/16 -j DROP
+-A INPUT -s 172.16.0.0/12 -j DROP
+-A INPUT -s 192.0.0.0/24 -j DROP
+-A INPUT -s 192.0.2.0/24 -j DROP
+-A INPUT -s 192.168.0.0/16 -j DROP
+-A INPUT -s 198.18.0.0/15 -j DROP
+-A INPUT -s 198.51.100.0/24 -j DROP
+-A INPUT -s 203.0.113.0/24 -j DROP
+-A INPUT -s 224.0.0.0/4 -j DROP
+-A INPUT -s 240.0.0.0/4 -j DROP
+-A INPUT -s 255.255.255.255/32 -j DROP
+
 {% if INTERNAL_LISTEN_IP != "" %}
 -A INPUT -d {{ INTERNAL_LISTEN_IP }}/32 -p tcp -m tcp --dport 53 -j ACCEPT
 -A INPUT -d {{ INTERNAL_LISTEN_IP }}/32 -p udp -m udp --dport 53 -j ACCEPT
 -A INPUT -d {{ INTERNAL_LISTEN_IP }}/32 -j DROP
 {% endif %}
+
 {% if EXTERNAL_LISTEN_IP != "" %}
 -A INPUT -d {{ EXTERNAL_LISTEN_IP }}/32 -p tcp -m tcp --dport 53 -j ACCEPT
 -A INPUT -d {{ EXTERNAL_LISTEN_IP }}/32 -p udp -m udp --dport 53 -j ACCEPT
 -A INPUT -d {{ EXTERNAL_LISTEN_IP }}/32 -j DROP
 {% endif %}
+
 -A FORWARD -s 10.70.90.53/32 -d {{ INTERNAL_MGT_IP }}/32 -j ACCEPT
+
 {% if INTERNAL_LISTEN_IP != "" %}
 -A FORWARD -d {{ INTERNAL_LISTEN_IP }}/32 -p tcp -m tcp --dport 53 -j ACCEPT
 -A FORWARD -d {{ INTERNAL_LISTEN_IP }}/32 -p udp -m udp --dport 53 -j ACCEPT
 -A FORWARD -d {{ INTERNAL_LISTEN_IP }}/32 -j DROP
 {% endif %}
+
 {% if EXTERNAL_LISTEN_IP != "" %}
 -A FORWARD -d {{ EXTERNAL_LISTEN_IP }}/32 -p tcp -m tcp --dport 53 -j ACCEPT
 -A FORWARD -d {{ EXTERNAL_LISTEN_IP }}/32 -p udp -m udp --dport 53 -j ACCEPT
 -A FORWARD -d {{ EXTERNAL_LISTEN_IP }}/32 -j DROP
 {% endif %}
+
 COMMIT
