--- a/infra/ansible/roles/dns-frr/templates/iptables.j2
+++ b/infra/ansible/roles/dns-frr/templates/iptables.j2
@@ -22,6 +22,22 @@
 -A INPUT -s 240.0.0.0/4 -j DROP
 -A INPUT -s 255.255.255.255/32 -j DROP
 
+-A OUTPUT -d 0.0.0.0/8 -j DROP
+-A OUTPUT -d 100.64.0.0/10 -j DROP
+-A OUTPUT -d 127.0.0.0/8 -j DROP
+-A OUTPUT -d 127.0.53.53 -j DROP
+-A OUTPUT -d 169.254.0.0/16 -j DROP
+-A OUTPUT -d 172.16.0.0/12 -j DROP
+-A OUTPUT -d 192.0.0.0/24 -j DROP
+-A OUTPUT -d 192.0.2.0/24 -j DROP
+-A OUTPUT -d 192.168.0.0/16 -j DROP
+-A OUTPUT -d 198.18.0.0/15 -j DROP
+-A OUTPUT -d 198.51.100.0/24 -j DROP
+-A OUTPUT -d 203.0.113.0/24 -j DROP
+-A OUTPUT -d 224.0.0.0/4 -j DROP
+-A OUTPUT -d 240.0.0.0/4 -j DROP
+-A OUTPUT -d 255.255.255.255/32 -j DROP
+
 {% if INTERNAL_LISTEN_IP != "" %}
 -A INPUT -d {{ INTERNAL_LISTEN_IP }}/32 -p tcp -m tcp --dport 53 -j ACCEPT
 -A INPUT -d {{ INTERNAL_LISTEN_IP }}/32 -p udp -m udp --dport 53 -j ACCEPT
