--- a/infra/ansible/roles/knot-authoritative/templates/knot.conf.j2
+++ b/infra/ansible/roles/knot-authoritative/templates/knot.conf.j2
@@ -16,7 +16,7 @@ mod-rrl:
 
 template:
   - id: default
-    global-module: mod-rrl/default
+    global-module: mod-rrl/default, mod-stats
     storage: /var/lib/knot/zones
 
 zone:
