reduce cache size

--- a/infra/ansible/roles/knot-recursive/templates/kresd.conf.j2
+++ b/infra/ansible/roles/knot-recursive/templates/kresd.conf.j2
@@ -33,4 +33,4 @@ modules = {
 
 -- Cache size
 cache.storage = 'lmdb:///var/cache/knot-resolver-cache'
-cache.size = cache.fssize() - 10*MB
+cache.size = cache.fssize() - 1000*MB - 10*MB
