--- a/infra/ansible/roles/knot-recursive/templates/kresd.conf.j2
+++ b/infra/ansible/roles/knot-recursive/templates/kresd.conf.j2
@@ -21,15 +21,33 @@ net.listen('{{ EXTERNAL_LISTEN_IP }}', 53, { kind = 'dns' })
 net.listen('{{ EXTERNAL_LISTEN_IP }}', 443, { kind = 'doh2' })
 {% endif %}
 
--- Mesh
-policy.add(policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
-
 -- Load useful modules
 modules = {
         'hints > iterate',  -- Allow loading /etc/hosts or custom root hints
         'stats',            -- Track internal statistics
-        'http',             -- stats in metrics format
+        'http',             -- Stats in metrics format
+        'policy',           -- Allow/deny requests
+        'view',             -- Consider query sources
 }
+
+-- Mesh from mesh
+view:addr('10.0.0.0/8', policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
+view:addr('23.158.16.0/24', policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
+view:addr('199.167.59.0/24', policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
+view:addr('199.170.132.0/24', policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
+view:addr('208.68.5.0/24', policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
+
+-- Allow all from mesh
+view:addr('127.0.0.0/8', policy.all(policy.PASS))
+view:addr('10.0.0.0/8', policy.all(policy.PASS))
+view:addr('23.158.16.0/24', policy.all(policy.PASS))
+view:addr('199.167.59.0/24', policy.all(policy.PASS))
+view:addr('199.170.132.0/24', policy.all(policy.PASS))
+view:addr('208.68.5.0/24', policy.all(policy.PASS))
+
+-- Deny other
+view:addr('0.0.0.0/0', policy.all(policy.REFUSE))
+
 
 -- Cache size
 cache.storage = 'lmdb:///var/cache/knot-resolver-cache'
