--- a/infra/ansible/roles/dns-telegraf/templates/telegraf.conf.j2
+++ b/infra/ansible/roles/dns-telegraf/templates/telegraf.conf.j2
@@ -233,4 +233,4 @@
 
 [[outputs.datadog]]
   apikey = "{{ DATADOG_API_KEY }}"
-  namepass = ["cookies*", "prometheus*", "rrl*", "server*", "stats*"]
+  #namepass = ["cookies*", "prometheus*", "rrl*", "server*", "stats*"]
