host doh zone on nycmesh-713-dns-auth-4

--- a/infra/ansible/roles/knot-authoritative/templates/knot.conf.j2
+++ b/infra/ansible/roles/knot-authoritative/templates/knot.conf.j2
@@ -29,6 +29,8 @@ zone:
   - domain: mesh
   - domain: mesh.nycmesh.net
     file: mesh.zone
+  - domain: doh.mesh.nycmesh.net
+    file: doh.mesh.nycmesh.net.zone
   - domain: nycmeshconnect.com
     file: nycmeshconnect.com.zone
   - domain: nycmeshconnect.net
