--- a/infra/ansible/roles/knot-authoritative/templates/knot.conf.j2
+++ b/infra/ansible/roles/knot-authoritative/templates/knot.conf.j2
@@ -25,12 +25,23 @@ template:
     global-module: mod-stats
     storage: /var/lib/knot/zones
 
+key:
+  - id: doh.mesh.nycmesh.net
+    algorithm: hmac-sha384
+    secret: {{ TSIG_KEY_DOH }}
+
+acl:
+  - id: acl-update-doh
+    action: update
+    key: doh.mesh.nycmesh.net
+
 zone:
   - domain: mesh
   - domain: mesh.nycmesh.net
     file: mesh.zone
   - domain: doh.mesh.nycmesh.net
     file: doh.mesh.nycmesh.net.zone
+    acl: acl-update-doh
   - domain: nycmeshconnect.com
     file: nycmeshconnect.com.zone
   - domain: nycmeshconnect.net
