--- a/infra/ansible/roles/knot-recursive/templates/certbot.sh.j2
+++ b/infra/ansible/roles/knot-recursive/templates/certbot.sh.j2
@@ -1,9 +1,12 @@
 
 DOMAIN="doh.mesh.nycmesh.net"
 
-certbot certonly \
+/root/certbot_venv/bin/certbot certonly \
   --dns-rfc2136 \
   --dns-rfc2136-credentials /root/tsig.ini \
+  --non-interactive \
+  --agree-tos \
+  -m jameso@nycmesh.net \
   -d $DOMAIN
 
 cat /etc/letsencrypt/live/$DOMAIN/fullchain.pem > /etc/knot-resolver/server-cert.pem
