--- a/infra/ansible/roles/dns-frr/templates/frr.conf.j2
+++ b/infra/ansible/roles/dns-frr/templates/frr.conf.j2
@@ -11,6 +11,7 @@ interface eth0
 exit
 !
 router ospf
+ ospf router-id {{ ROUTER_IP }}
  network {{ INTERNAL_NETWORK_RANGE }} area 0
  network {{ INTERNAL_LISTEN_IP }}/32 area 0
 {% if EXTERNAL_LISTEN_IP != "" %} network {{ EXTERNAL_LISTEN_IP }}/32 area 0
