Parameterize stub resolver

--- a/infra/ansible/roles/knot-recursive/templates/kresd.conf.j2
+++ b/infra/ansible/roles/knot-recursive/templates/kresd.conf.j2
@@ -32,11 +32,11 @@ net.tls("/etc/knot-resolver/server-cert.pem", "/etc/knot-resolver/server-key.pem
 {% endif %}
 
 -- Mesh from mesh
-view:addr('10.0.0.0/8', policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
-view:addr('23.158.16.0/24', policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
-view:addr('199.167.59.0/24', policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
-view:addr('199.170.132.0/24', policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
-view:addr('208.68.5.0/24', policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
+view:addr('10.0.0.0/8', policy.suffix(policy.STUB('{{ MESH_STUB_RESOLVER }}'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
+view:addr('23.158.16.0/24', policy.suffix(policy.STUB('{{ MESH_STUB_RESOLVER }}'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
+view:addr('199.167.59.0/24', policy.suffix(policy.STUB('{{ MESH_STUB_RESOLVER }}'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
+view:addr('199.170.132.0/24', policy.suffix(policy.STUB('{{ MESH_STUB_RESOLVER }}'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
+view:addr('208.68.5.0/24', policy.suffix(policy.STUB('{{ MESH_STUB_RESOLVER }}'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
 
 -- Allow all from mesh
 view:addr('127.0.0.0/8', policy.all(policy.PASS))
