--- a/infra/ansible/roles/dns-frr/templates/iptables.j2
+++ b/infra/ansible/roles/dns-frr/templates/iptables.j2
@@ -28,8 +28,8 @@
 {% if EXTERNAL_OUTGOING_IP != "" %}
 -A INPUT -d {{ EXTERNAL_OUTGOING_IP }}/32 -p tcp -m tcp --dport 53 -j DROP
 -A INPUT -d {{ EXTERNAL_OUTGOING_IP }}/32 -p udp -m udp --dport 53 -j DROP
--A INPUT -d {{ EXTERNAL_OUTGOING_IP }}/32 -p tcp -m udp --dport 443 -j DROP
--A INPUT -d {{ EXTERNAL_OUTGOING_IP }}/32 -p tcp -m udp --dport 22 -j DROP
+-A INPUT -d {{ EXTERNAL_OUTGOING_IP }}/32 -p tcp -m tcp --dport 443 -j DROP
+-A INPUT -d {{ EXTERNAL_OUTGOING_IP }}/32 -p tcp -m tcp --dport 22 -j DROP
 {% endif %}
 
 -A FORWARD -s 10.70.90.53/32 -d {{ INTERNAL_MGT_IP }}/32 -j ACCEPT
