--- a/infra/ansible/roles/knot-recursive/templates/kresd.conf.j2
+++ b/infra/ansible/roles/knot-recursive/templates/kresd.conf.j2
@@ -16,7 +16,7 @@ net.listen('{{ EXTERNAL_LISTEN_IP }}', 443, { kind = 'doh2' })
 
 {% if EXTERNAL_OUTGOING_IP != "" %}
 -- EXTERNAL_OUTGOING_IP
-net.outgoing_v4({ '{{ EXTERNAL_OUTGOING_IP }}' })
+net.outgoing_v4('{{ EXTERNAL_OUTGOING_IP }}')
 {% endif %}
 
 -- Load useful modules
