--- a/infra/ansible/roles/dns-frr/templates/frr.conf.j2
+++ b/infra/ansible/roles/dns-frr/templates/frr.conf.j2
@@ -16,5 +16,7 @@ router ospf
  network {{ INTERNAL_LISTEN_IP }}/32 area 0
 {% if EXTERNAL_LISTEN_IP != "" %} network {{ EXTERNAL_LISTEN_IP }}/32 area 0
 {% endif %}
+{% if EXTERNAL_OUTGOING_IP != "" %} network {{ EXTERNAL_OUTGOING_IP }}/32 area 0
+{% endif %}
 exit
 !
