--- a/infra/ansible/roles/dns-frr/templates/iptables.j2
+++ b/infra/ansible/roles/dns-frr/templates/iptables.j2
@@ -25,6 +25,15 @@
 -A INPUT -d {{ EXTERNAL_LISTEN_IP }}/32 -j DROP
 {% endif %}
 
+# Catch all
+-A INPUT -p tcp --dport 5355 -j DROP
+-A INPUT -p udp --dport 5355 -j DROP
+-A INPUT -p tcp --dport 53   -j DROP
+-A INPUT -p udp --dport 53   -j DROP
+-A INPUT -p tcp --dport 443  -j DROP
+-A INPUT -p tcp --dport 22   -j DROP
+-A INPUT -p tcp --dport 25   -j DROP
+
 -A FORWARD -s 10.70.90.53/32 -d {{ INTERNAL_MGT_IP }}/32 -j ACCEPT
 
 {% if INTERNAL_LISTEN_IP != "" %}
