Add TSIG keys (#181)
* proxmox tsig

* cleanup

* prox

* clean

* assign acl

* fix

* clean

* unroll

--- a/infra/ansible/roles/knot_authoritative/templates/knot.conf.j2
+++ b/infra/ansible/roles/knot_authoritative/templates/knot.conf.j2
@@ -26,11 +26,47 @@ template:
     storage: /var/lib/knot/zones
 
 key:
+  - id: grandmox.prox.mesh.nycmesh.net.
+    algorithm: hmac-sha512
+    secret: {{ TSIG_KEY_GRANDMOX }}
+  - id: jon.prox.mesh.nycmesh.net.
+    algorithm: hmac-sha512
+    secret: {{ TSIG_KEY_JON }}
+  - id: nycmesh-10-r630-01.prox.mesh.nycmesh.net.
+    algorithm: hmac-sha512
+    secret: {{ TSIG_KEY_10_R630_01 }}
+  - id: nycmesh-713-r640-01.prox.mesh.nycmesh.net.
+    algorithm: hmac-sha512
+    secret: {{ TSIG_KEY_713_R640_01 }}
   - id: doh.mesh.nycmesh.net.
     algorithm: hmac-sha512
     secret: {{ TSIG_KEY_DOH }}
 
 acl:
+  - id: acl-update-grandmox
+    action: update
+    update-type: [TXT]
+    update-owner-match: equal
+    update-owner-name: acme-challenge.grandmox.prox.mesh.nycmesh.net.
+    key: grandmox.prox.mesh.nycmesh.net.
+  - id: acl-update-jon
+    action: update
+    update-type: [TXT]
+    update-owner-match: equal
+    update-owner-name: acme-challenge.jon.prox.mesh.nycmesh.net.
+    key: jon.prox.mesh.nycmesh.net.
+  - id: acl-update-nycmesh-10-r630-01
+    action: update
+    update-type: [TXT]
+    update-owner-match: equal
+    update-owner-name: acme-challenge.nycmesh-10-r630-01.prox.mesh.nycmesh.net.
+    key: nycmesh-10-r630-01.prox.mesh.nycmesh.net.
+  - id: acl-update-nycmesh-713-r640-01
+    action: update
+    update-type: [TXT]
+    update-owner-match: equal
+    update-owner-name: acme-challenge.nycmesh-713-r640-01.prox.mesh.nycmesh.net.
+    key: nycmesh-713-r640-01.prox.mesh.nycmesh.net.
   - id: acl-update-doh
     action: update
     update-type: [TXT]
@@ -45,6 +81,9 @@ zone:
   - domain: doh.mesh.nycmesh.net
     file: doh.mesh.nycmesh.net.zone
     acl: acl-update-doh
+  - domain: prox.mesh.nycmesh.net
+    file: prox.mesh.nycmesh.net
+    acl: [acl-update-grandmox, acl-update-jon, acl-update-nycmesh-10-r630-01, acl-update-nycmesh-713-r640-01]
   - domain: nycmeshconnect.com
     file: nycmeshconnect.com.zone
   - domain: nycmeshconnect.net
