--- a/infra/ansible/roles/knot_authoritative/templates/knot.conf.j2
+++ b/infra/ansible/roles/knot_authoritative/templates/knot.conf.j2
@@ -82,7 +82,7 @@ zone:
     file: doh.mesh.nycmesh.net.zone
     acl: acl-update-doh
   - domain: prox.mesh.nycmesh.net
-    file: prox.mesh.nycmesh.net
+    file: prox.mesh.nycmesh.net.zone
     acl: [acl-update-grandmox, acl-update-jon, acl-update-nycmesh-10-r630-01, acl-update-nycmesh-713-r640-01]
   - domain: nycmeshconnect.com
     file: nycmeshconnect.com.zone
