--- a/infra/ansible/roles/knot_recursive/templates/kresd.conf.j2
+++ b/infra/ansible/roles/knot_recursive/templates/kresd.conf.j2
@@ -36,6 +36,31 @@ nsid.name('{{ SERVER_HOSTNAME }}')
 net.tls("/etc/knot-resolver/server-cert.pem", "/etc/knot-resolver/server-key.pem")
 {% endif %}
 
+-- Subdomains delegated outside of "this" server from within the mesh
+view:addr('10.0.0.0/8', policy.suffix(policy.FORWARD('10.70.90.174'), policy.todnames({'.me.mesh.', '.em.mesh.nycmesh.net.'})))
+view:addr('23.158.16.0/24', policy.suffix(policy.FORWARD('10.70.90.174'), policy.todnames({'.em.mesh.', '.em.mesh.nycmesh.net.'})))
+view:addr('199.167.59.0/24', policy.suffix(policy.FORWARD('10.70.90.174'), policy.todnames({'.em.mesh.', '.em.mesh.nycmesh.net.'})))
+view:addr('199.170.132.0/24', policy.suffix(policy.FORWARD('10.70.90.174'), policy.todnames({'.em.mesh.', '.em.mesh.nycmesh.net.'})))
+view:addr('208.68.5.0/24', policy.suffix(policy.FORWARD('10.70.90.174'), policy.todnames({'.em.mesh.', '.em.mesh.nycmesh.net.'})))
+
+view:addr('10.0.0.0/8', policy.suffix(policy.FORWARD('10.70.132.1'), policy.todnames({'.zrg.mesh.', '.zrg.mesh.nycmesh.net.', '.n363.mesh.', '.n363.mesh.nycmesh.net.'})))
+view:addr('23.158.16.0/24', policy.suffix(policy.FORWARD('10.70.132.1'), policy.todnames({'.zrg.mesh.', '.zrg.mesh.nycmesh.net.', '.n363.mesh.', '.n363.mesh.nycmesh.net.'})))
+view:addr('199.167.59.0/24', policy.suffix(policy.FORWARD('10.70.132.1'), policy.todnames({'.zrg.mesh.', '.zrg.mesh.nycmesh.net.', '.n363.mesh.', '.n363.mesh.nycmesh.net.'})))
+view:addr('199.170.132.0/24', policy.suffix(policy.FORWARD('10.70.132.1'), policy.todnames({'.zrg.mesh.', '.zrg.mesh.nycmesh.net.', '.n363.mesh.', '.n363.mesh.nycmesh.net.'})))
+view:addr('208.68.5.0/24', policy.suffix(policy.FORWARD('10.70.132.1'), policy.todnames({'.zrg.mesh.', '.zrg.mesh.nycmesh.net.', '.n363.mesh.', '.n363.mesh.nycmesh.net.'})))
+
+view:addr('10.0.0.0/8', policy.suffix(policy.FORWARD('199.170.132.101'), policy.todnames({'.daniel.mesh.', '.daniel.mesh.nycmesh.net.'})))
+view:addr('23.158.16.0/24', policy.suffix(policy.FORWARD('199.170.132.101'), policy.todnames({'.daniel.mesh.', '.daniel.mesh.nycmesh.net.'})))
+view:addr('199.167.59.0/24', policy.suffix(policy.FORWARD('199.170.132.101'), policy.todnames({'.daniel.mesh.', '.daniel.mesh.nycmesh.net.'})))
+view:addr('199.170.132.0/24', policy.suffix(policy.FORWARD('199.170.132.101'), policy.todnames({'.daniel.mesh.', '.daniel.mesh.nycmesh.net.'})))
+view:addr('208.68.5.0/24', policy.suffix(policy.FORWARD('199.170.132.101'), policy.todnames({'.daniel.mesh.', '.daniel.mesh.nycmesh.net.'})))
+
+view:addr('10.0.0.0/8', policy.suffix(policy.FORWARD('54.161.165.190'), policy.todnames({'.andrew.mesh.', '.andrew.mesh.nycmesh.net.'})))
+view:addr('23.158.16.0/24', policy.suffix(policy.FORWARD('54.161.165.190'), policy.todnames({'.andrew.mesh.', '.andrew.mesh.nycmesh.net.'})))
+view:addr('199.167.59.0/24', policy.suffix(policy.FORWARD('54.161.165.190'), policy.todnames({'.andrew.mesh.', '.andrew.mesh.nycmesh.net.'})))
+view:addr('199.170.132.0/24', policy.suffix(policy.FORWARD('54.161.165.190'), policy.todnames({'.andrew.mesh.', '.andrew.mesh.nycmesh.net.'})))
+view:addr('208.68.5.0/24', policy.suffix(policy.FORWARD('54.161.165.190'), policy.todnames({'.andrew.mesh.', '.andrew.mesh.nycmesh.net.'})))
+
 -- Mesh from mesh
 view:addr('10.0.0.0/8', policy.suffix(policy.STUB('{{ MESH_STUB_RESOLVER }}'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
 view:addr('23.158.16.0/24', policy.suffix(policy.STUB('{{ MESH_STUB_RESOLVER }}'), policy.todnames({'mesh.', 'mesh.nycmesh.net.'})))
