--- a/infra/ansible/roles/knot_authoritative/templates/knot.conf.j2
+++ b/infra/ansible/roles/knot_authoritative/templates/knot.conf.j2
@@ -111,6 +111,15 @@ zone:
   - domain: prox.mesh.nycmesh.net
     file: prox.mesh.nycmesh.net.zone
     acl: [acl-update-grandmox, acl-update-jon, acl-update-nycmesh-10-r630-01, acl-update-nycmesh-713-r640-01]
+  - domain: building.mesh.nycmesh.net
+    file: building.mesh.nycmesh.net.zone
+    acl: acl-update-building
+  - domain: jamesinternaldev3.mesh.nycmesh.net
+    file: jamesinternaldev3.mesh.nycmesh.net.zone
+    acl: acl-update-jamesinternaldev3
+  - domain: jamesinternalprod2.mesh.nycmesh.net
+    file: jamesinternalprod2.mesh.nycmesh.net.zone
+    acl: acl-update-jamesinternalprod2
   - domain: nycmeshconnect.com
     file: nycmeshconnect.com.zone
   - domain: nycmeshconnect.net
